--- a/1.html
+++ b/1.html
@@ -5,6 +5,15 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
 </head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1GKELMCJEB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1GKELMCJEB');
+</script>
 
 <body>
   <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
