--- a/1.html
+++ b/1.html
@@ -6,13 +6,13 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1GKELMCJEB"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-49RBYEDVJ0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-1GKELMCJEB');
+  gtag('config', 'G-49RBYEDVJ0');
 </script>
 
 <body>
