--- a/1.html
+++ b/1.html
@@ -25,7 +25,7 @@
     <li><a href="4.html">메인보드</a></li>
     <li><a href="5.html">HDD,SSD</a></li>
     <li><a href="7.html">파워</a></li>
-    <li><a href="8.html">컴퓨터어떻게사니</a></li>
+    
   </ol>
   <div>
     <h2>CPU(Central Processing Unit)</a></h2>
@@ -35,7 +35,7 @@
     <p>CPU를 공장이라고 하자 그리고 일꾼을 트렌지스터라고 하자. 공장마다 일꾼들의 속도가 다를 것이다. </p>
     <p>이때 일꾼들의 속도를 동작속도 즉 클럭이라고한다.</p>
     <p>코어와 쓰레드는 다음 표를 확인해보자.</p>
-    <p><img src="core.png" style=""></p>
+    <p><img src="core.png" width="70%"></p>
     <p>코어와 쓰레드가 많으면 다중작업에서 효율적이다.</p>
     <h3><인텔></h3>
 
