--- a/2.html
+++ b/2.html
@@ -17,22 +17,24 @@
     <li><a href="4.html">메인보드</a></li>
     <li><a href="5.html">HDD,SSD</a></li>
     <li><a href="7.html">파워</a></li>
-    <li><a href="8.html">컴퓨터어떻게사니</a></li>
+  
   </ol>
 <div>
   <h2>RAM</h2>
   <p>RAM은 임시창고라고 보면된다. 이해를 돕기위해 아래 그림을 보아라.</p>
-  <p><img src="RAM.png"></p>
+  <p><img src="RAM.png" width="60%"></p>
   <p>이렇듯 RAM은 많으면 많을 수록 좋다. 즉, 다다익선</p>
   <p>사무용&가벼운 게임 : 4~8기가</p>
-  <p><img src="ram1.jpg" width="50" height="50" >
-  <img src="ram2.png" width="50" height="50" >
-  <img src="ram3.jpg" width="50" height="50" ></p>
+  <p><img src="ram1.jpg" width="6%" height="6%" >
+  <img src="ram2.png" width="6%" height="6%" >
+  <img src="ram3.jpg" width="6%" height="6%" ></p>
 
   <p>작업용&무거운 게임 : 16기가 이상</p>
-  <p><img src="ram4.jpg" width="50" height="50" >
-  <img src="ram6.png" width="50" height="50" >
-  <img src="ram5.jpg" width="50" height="50" ></p>
+  <p><img src="ram4.jpg" width="6%" height="6%" >
+  <img src="ram6.png" width="6%" height="6%" >
+  <img src="ram5.jpg" width="6%" height="6%" ></p>
+
+
 </div>
 </div>
 </body>
