--- a/1.html
+++ b/1.html
@@ -3,8 +3,9 @@
 <head>
 <title>CPU</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 </head>
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GKELMCJEB"></script>
 <script>
@@ -18,15 +19,16 @@
 <body>
   <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
 <div id="grid">
-  <ol>
+
+    <ol id="ba">
     <li><a href="1.html">CPU</a></li>
     <li><a href="2.html">RAM</a></li>
     <li><a href="3.html">그래픽카드(VGA)</a></li>
     <li><a href="4.html">메인보드</a></li>
     <li><a href="5.html">HDD,SSD</a></li>
     <li><a href="7.html">파워</a></li>
-    
-  </ol>
+    </ol>
+
   <div>
     <h2>CPU(Central Processing Unit)</a></h2>
 
