--- a/5.html
+++ b/5.html
@@ -3,20 +3,20 @@
 <head>
 <title>HDD,SSD</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
   <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
 <div id="grid">
-  <ol>
+  <ol id="ba">
     <li><a href="1.html">CPU</a></li>
     <li><a href="2.html">RAM</a></li>
     <li><a href="3.html">그래픽카드(VGA)</a></li>
     <li><a href="4.html">메인보드</a></li>
     <li><a href="5.html">HDD,SSD</a></li>
     <li><a href="7.html">파워</a></li>
-    
+
   </ol>
 <div>
 <h2>HDD,SSD</h2>
