--- a/5.html
+++ b/5.html
@@ -5,35 +5,39 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style2.css">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
-  <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
-<div id="grid">
-  <ol id="ba">
-    <li><a href="1.html">CPU</a></li>
-    <li><a href="2.html">RAM</a></li>
-    <li><a href="3.html">그래픽카드(VGA)</a></li>
-    <li><a href="4.html">메인보드</a></li>
-    <li><a href="5.html">HDD,SSD</a></li>
-    <li><a href="7.html">파워</a></li>
-
+  <div class="header">
+    <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
+  </div>
+  <div class="grid">
+  <div class="col-1 menu">
+  <ol>
+    <li><a href="1.html" style="color : white">CPU</a></li>
+    <li><a href="2.html" style="color : white">RAM</a></li>
+    <li><a href="3.html" style="color : white">그래픽카드(VGA)</a></li>
+    <li><a href="4.html" style="color : white">메인보드</a></li>
+    <li><a href="5.html" style="color : white">HDD,SSD</a></li>
+    <li><a href="7.html" style="color : white">파워</a></li>
   </ol>
-<div>
+</div>
+<div class="col-2">
 <h2>HDD,SSD</h2>
 <p>HDD와 SSD는 저장장치다.각종 데이터들을 저장해두는 창고라고 보면된다.</P>
 <h2>HDD</h2>
   <P>HDD의 구조는 이렇다.</P>
-  <P><img src="HDD.jpg"></P>
+  <P><img src="HDD.jpg" width="60%"></P>
   <P>HDD의 작동원리를 간단하게 표현해보자</P>
-  <P><img src="HDD1.png"></P>
+  <P><img src="HDD1.png" width="60%"></P>
   <P>하지만 하드디스크의 속도는 CPU와 RAM에 비하면 매우 느리다</P>
   <P>그러면 어떻게 HDD의 속도를 높일까?</P>
-  <P><img src="HDD2.png"></P>
+  <P><img src="HDD2.png" width="60%"></P>
   <P>하지만, 플래터의 회전속도가 빠른 하드디스크(HDD)는 너무 비싸고 소음과 진동도 심하다.</P>
   <P>이러한 단점을 극복하고자 나온 저장장치가 SSD이다.</P>
 <h2>SSD</h2>
   <P>SSD는 하드디스크(HDD)와 달리 고용량 메모리칩을 여러개 넣은 구조이다.</P>
-  <P><img src="SSD.jpg"></P>
+  <P><img src="SSD.jpg" width="60%"></P>
   <P>회전을 하지 않기 때문에 소음이 없다. 하드디스크처럼 검색장치(ARM)가 내부에서 찾는 것이 아니기 때문에 저장된 자료를 찾는 속도또한 매우 빠르다.</P>
 <p></p>
 <h3>그렇다면 하드디스크는 사용하지 않나?</h3>
