--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style2.css">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 <body>
-  <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
-  <ol id="ba">
-    <li><a href="1.html">CPU</a></li>
-    <li><a href="2.html">RAM</a></li>
-    <li><a href="3.html">그래픽카드(VGA)</a></li>
-    <li><a href="4.html">메인보드</a></li>
-    <li><a href="5.html">HDD,SSD</a></li>
-    <li><a href="7.html">파워</a></li>
+  <div class="header">
+    <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
+  </div>
+  <div class="grid">
+<div class="col-1 menu">
+  <ol>
+    <li><a href="1.html" style="color : white">CPU</a></li>
+    <li><a href="2.html" style="color : white">RAM</a></li>
+    <li><a href="3.html" style="color : white">그래픽카드(VGA)</a></li>
+    <li><a href="4.html" style="color : white">메인보드</a></li>
+    <li><a href="5.html" style="color : white">HDD,SSD</a></li>
+    <li><a href="7.html" style="color : white">파워</a></li>
 
   </ol>
+</div>
+</div>
 
 </body>
 </html>
