--- a/1.html
+++ b/1.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style2.css">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GKELMCJEB"></script>
@@ -17,19 +18,23 @@
 </script>
 
 <body>
-  <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
-<div id="grid">
+  <div class="header">
+      <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
+  </div>
 
-    <ol id="ba">
-    <li><a href="1.html">CPU</a></li>
-    <li><a href="2.html">RAM</a></li>
-    <li><a href="3.html">그래픽카드(VGA)</a></li>
-    <li><a href="4.html">메인보드</a></li>
-    <li><a href="5.html">HDD,SSD</a></li>
-    <li><a href="7.html">파워</a></li>
+<div class="grid">
+  <div class="col-1 menu">
+    <ol>
+    <li><a href="1.html" style="color : white">CPU</a></li>
+    <li><a href="2.html" style="color : white">RAM</a></li>
+    <li><a href="3.html" style="color : white">그래픽카드(VGA)</a></li>
+    <li><a href="4.html" style="color : white">메인보드</a></li>
+    <li><a href="5.html" style="color : white">HDD,SSD</a></li>
+    <li><a href="7.html" style="color : white">파워</a></li>
     </ol>
+  </div>
 
-  <div>
+  <div class="col-2">
     <h2>CPU(Central Processing Unit)</a></h2>
 
     <p>CPU는 트렌지스터의 복합체다. 한마디로 수 많은 트렌지스터가 모여 만들어진 것이 CPU이다.</p>
