--- a/2.html
+++ b/2.html
@@ -6,36 +6,52 @@
 <link rel="stylesheet" href="style2.css">
 
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PMH586PNGX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PMH586PNGX');
+</script>
 
 <body>
-  <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
-<div id="grid">
-  <ol id="ba">
-    <li><a href="1.html">CPU</a></li>
-    <li><a href="2.html">RAM</a></li>
-    <li><a href="3.html">그래픽카드(VGA)</a></li>
-    <li><a href="4.html">메인보드</a></li>
-    <li><a href="5.html">HDD,SSD</a></li>
-    <li><a href="7.html">파워</a></li>
 
-  </ol>
-<div>
-  <h2>RAM</h2>
-  <p>RAM은 임시창고라고 보면된다. 이해를 돕기위해 아래 그림을 보아라.</p>
-  <p><img src="RAM.png" width="60%"></p>
-  <p>이렇듯 RAM은 많으면 많을 수록 좋다. 즉, 다다익선</p>
-  <p>사무용&가벼운 게임 : 4~8기가</p>
-  <p><img src="ram1.jpg" width="6%" height="6%" >
-  <img src="ram2.png" width="6%" height="6%" >
-  <img src="ram3.jpg" width="6%" height="6%" ></p>
+    <div class="header">
+      <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
+    </div>
+    <div id="v">
+      <div class="grid">
+        <div class="col-1 menu">
+          <ol>
+            <li><a href="1.html" style="color : white">CPU</a></li>
+            <li><a href="2.html" style="color : white">RAM</a></li>
+            <li><a href="3.html" style="color : white">그래픽카드(VGA)</a></li>
+            <li><a href="4.html" style="color : white">메인보드</a></li>
+            <li><a href="5.html" style="color : white">HDD,SSD</a></li>
+            <li><a href="7.html" style="color : white">파워</a></li>
+          </ol>
+        </div>
+        <div class="col-2">
+          <h2>RAM</h2>
+          <p>RAM은 임시창고라고 보면된다. 이해를 돕기위해 아래 그림을 보아라.</p>
+          <p><img src="RAM.png" width="60%"></p>
+          <p>이렇듯 RAM은 많으면 많을 수록 좋다. 즉, 다다익선</p>
+          <p>사무용&가벼운 게임 : 4~8기가</p>
+          <p><img src="ram1.jpg" width="6%" height="6%" >
+            <img src="ram2.png" width="6%" height="6%" >
+            <img src="ram3.jpg" width="6%" height="6%" ></p>
 
-  <p>작업용&무거운 게임 : 16기가 이상</p>
-  <p><img src="ram4.jpg" width="6%" height="6%" >
-  <img src="ram6.png" width="6%" height="6%" >
-  <img src="ram5.jpg" width="6%" height="6%" ></p>
+            <p>작업용&무거운 게임 : 16기가 이상</p>
+            <p><img src="ram4.jpg" width="6%" height="6%" >
+              <img src="ram6.png" width="6%" height="6%" >
+              <img src="ram5.jpg" width="6%" height="6%" ></p>
 
 
-</div>
-</div>
+            </div>
+          </div>
+        </div>
 </body>
 </html>
