--- a/3.html
+++ b/3.html
@@ -5,24 +5,37 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style2.css">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JH90X6N8HH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JH90X6N8HH');
+</script>
 
 <body>
-  <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
-  <div id="grid">
-  <ol id="ba">
-    <li><a href="1.html">CPU</a></li>
-    <li><a href="2.html">RAM</a></li>
-    <li><a href="3.html">그래픽카드(VGA)</a></li>
-    <li><a href="4.html">메인보드</a></li>
-    <li><a href="5.html">HDD,SSD</a></li>
-    <li><a href="7.html">파워</a></li>
-
-  </ol>
-<div>
+  <div class="header">
+    <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
+  </div>
+  <div class="grid">
+    <div class="col-1 menu">
+  <ol>
+    <li><a href="1.html" style="color : white">CPU</a></li>
+    <li><a href="2.html" style="color : white">RAM</a></li>
+    <li><a href="3.html" style="color : white">그래픽카드(VGA)</a></li>
+    <li><a href="4.html" style="color : white">메인보드</a></li>
+    <li><a href="5.html" style="color : white">HDD,SSD</a></li>
+    <li><a href="7.html" style="color : white">파워</a></li>
+    </ol>
+  </div>
+<div class="col-2">
 <h2>그래픽카드(VGA)</h2>
-<p><img src="VGA.png"></p>
+<p><img src="VGA.png" width="60%"></p>
 <p>그래픽카드는 CPU로부터 결과를 받아 화면에 표현해주는 역할</P>
-  <P><img src="VGA1.png"></P>
+  <P><img src="VGA1.png" width="60%"></P>
   <P>위의 표를 보면 알 수 있듯이 그래픽카드를 고를 때 가장 중요한 것은 CPU와의 성능을 맞추는 것이다.</P>
   <P><strong>(한쪽만 좋은 것은 좋은 쪽의 성능을 뽑아내지 못 함.)</strong>
 </div>
