--- a/4.html
+++ b/4.html
@@ -5,20 +5,24 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style2.css">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
-  <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
-<div id="grid">
-  <ol id="ba">
-    <li><a href="1.html">CPU</a></li>
-    <li><a href="2.html">RAM</a></li>
-    <li><a href="3.html">그래픽카드(VGA)</a></li>
-    <li><a href="4.html">메인보드</a></li>
-    <li><a href="5.html">HDD,SSD</a></li>
-    <li><a href="7.html">파워</a></li>
-
+  <div class="header">
+    <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
+  </div>
+<div class="grid">
+  <div class="col-1 menu">
+  <ol>
+    <li><a href="1.html"style="color : white">CPU</a></li>
+    <li><a href="2.html"style="color : white">RAM</a></li>
+    <li><a href="3.html"style="color : white">그래픽카드(VGA)</a></li>
+    <li><a href="4.html"style="color : white">메인보드</a></li>
+    <li><a href="5.html"style="color : white">HDD,SSD</a></li>
+    <li><a href="7.html"style="color : white">파워</a></li>
   </ol>
-<div>
+</div>
+<div class="col-2">
 <h2>메인보드</h2>
 <p>메인보드는 컴퓨터의 땅과 같다.</p>
 <p>각종 부품들을 장착할 수 있는 소켓과 슬롯이 존재, 중요 부품들에게 전력을 공급하는 등 크고 작은 역할을 함</p>
