--- a/7.html
+++ b/7.html
@@ -3,22 +3,25 @@
 <head>
 <title>파워</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 </head>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
-  <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
-<div id="grid">
-  <ol id="ba">
-    <li><a href="1.html">CPU</a></li>
-    <li><a href="2.html">RAM</a></li>
-    <li><a href="3.html">그래픽카드(VGA)</a></li>
-    <li><a href="4.html">메인보드</a></li>
-    <li><a href="5.html">HDD,SSD</a></li>
-    <li><a href="7.html">파워</a></li>
+  <div class="header">
+    <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
+  </div><div class="grid">
+  <div class="col-1 menu">
+  <ol>
+    <li><a href="1.html" style="color : white">CPU</a></li>
+    <li><a href="2.html" style="color : white">RAM</a></li>
+    <li><a href="3.html" style="color : white">그래픽카드(VGA)</a></li>
+    <li><a href="4.html" style="color : white">메인보드</a></li>
+    <li><a href="5.html" style="color : white">HDD,SSD</a></li>
+    <li><a href="7.html" style="color : white">파워</a></li>
 
   </ol>
-<div>
+</div>
+<div class="col-2">
 <h2>파워</h2>
 <p>각 부품에 전원을 공급하기 위한 부품이다.</p>
 <p>파워는 교류를 직류로 전환해주는 "직류전환장치"이다.</p>
@@ -26,7 +29,7 @@
 <p>파워는 문제가 생겼을 때 다른 부품에 악영향을 끼치는 경우가 있다.</p>
 <p>그러므로, 안정적인 파워와 소비전력대비 적절한 파워가 필요하다.</p>
 <p>팁을 주자면 80+인증 제품들을 사는 것이 좋다.(80+인증제품은 안전성면에서 효율적인 것이지 성능면에서 효율적인 것은 아님!!)</p>
-<p><img src="power.png"></p>
+<p><img src="power.png" width="60%"></p>
 </div>
 </div>
 
