--- a/1.html
+++ b/1.html
@@ -67,16 +67,17 @@
     <p><img src="Ryzen 4.png" width=70%></p>
     <p>X가 붙어있는 CPU는 제조사에서 오버클럭을 자동으로 해주어 판매하는 제품이다</P>
     <p>오버클록을 통해서 CPU의 성능을 향상시킬 수 있지만 오버클록은 복잡하고 수동으로 해야함을 명심하자</p>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
 
-    <ins class="kakao_ad_area" style="display:none;"
-     data-ad-unit    = "DAN-iH1H3SAh37NimZP1"
-     data-ad-width   = "320"
-     data-ad-height  = "100"></ins>
-    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 
 
   </div>
 </div>
-
+<ins class="kakao_ad_area" style="display:none;"
+ data-ad-unit    = "DAN-FW4XaS8lcM3uDqLB"
+ data-ad-width   = "320"
+ data-ad-height  = "100"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 </body>
 </html>
