--- a/1.html
+++ b/1.html
@@ -17,6 +17,9 @@
   gtag('config', 'G-1GKELMCJEB');
 </script>
 
+                <!-- Go to www.addthis.com/dashboard to customize your tools -->
+                <div class="addthis_inline_share_toolbox"></div>
+            
 <body>
   <div class="header">
       <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
