--- a/1.html
+++ b/1.html
@@ -17,9 +17,12 @@
   gtag('config', 'G-1GKELMCJEB');
 </script>
 
-                <!-- Go to www.addthis.com/dashboard to customize your tools -->
-                <div class="addthis_inline_share_toolbox"></div>
-            
+
+                <ins class="kakao_ad_area" style="display:none;"
+     data-ad-unit    = "DAN-PZUOIkAaVM2EsdCR"
+     data-ad-width   = "320"
+     data-ad-height  = "100"></ins>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 <body>
   <div class="header">
       <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
@@ -72,15 +75,12 @@
     <p>오버클록을 통해서 CPU의 성능을 향상시킬 수 있지만 오버클록은 복잡하고 수동으로 해야함을 명심하자</p>
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
-
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<div class="addthis_inline_share_toolbox"></div>
 
 
   </div>
 </div>
-<ins class="kakao_ad_area" style="display:none;"
- data-ad-unit    = "DAN-FW4XaS8lcM3uDqLB"
- data-ad-width   = "320"
- data-ad-height  = "100"></ins>
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
 </body>
 </html>
