--- a/3.html
+++ b/3.html
@@ -39,6 +39,20 @@
   <P><img src="VGA1.png" width="60%"></P>
   <P>위의 표를 보면 알 수 있듯이 그래픽카드를 고를 때 가장 중요한 것은 CPU와의 성능을 맞추는 것이다.</P>
   <P><strong>(한쪽만 좋은 것은 좋은 쪽의 성능을 뽑아내지 못 함.)</strong>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<div class="addthis_inline_share_toolbox"></div>  <ins class="kakao_ad_area" style="display:none;"
+data-ad-unit    = "DAN-PZUOIkAaVM2EsdCR"
+data-ad-width   = "320"
+data-ad-height  = "100"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+<ins class="kakao_ad_area" style="display:none;"
+data-ad-unit    = "DAN-kDybkCZ02fzum4Uk"
+data-ad-width   = "728"
+data-ad-height  = "90"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
 </div>
 </div>
 </body>
