--- a/5.html
+++ b/5.html
@@ -20,7 +20,7 @@
     <li><a href="4.html" style="color : white">메인보드</a></li>
     <li><a href="5.html" style="color : white">HDD,SSD</a></li>
     <li><a href="7.html" style="color : white">파워</a></li>
-    
+
   </ol>
 </div>
 <div class="col-2">
@@ -45,6 +45,21 @@
   <p>그렇지는 않다. 그 이유는 하드디스크 만의 장점도 있기 때문이다.</p>
   <P>우선, 용량 대비 가격이 저렴하다. 현재의 기술력으로 SSD의 데이터복구는 불안정하다 그러므로 중요한 데이터백업용 자료는 하드디스크에 넣어둔다.</P>
   <P>그래서 메인프로그램용으로는 속도가 빠른 SSD를 사용하고 데이터저장용으로는 안전한 하드디스크(HDD)를 사용하는 것이 좋다.</P>
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<div class="addthis_inline_share_toolbox"></div>
+<ins class="kakao_ad_area" style="display:none;"
+data-ad-unit    = "DAN-PZUOIkAaVM2EsdCR"
+data-ad-width   = "320"
+data-ad-height  = "100"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+<ins class="kakao_ad_area" style="display:none;"
+data-ad-unit    = "DAN-kDybkCZ02fzum4Uk"
+data-ad-width   = "728"
+data-ad-height  = "90"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
 </div>
 </div>
 
