--- a/7.html
+++ b/7.html
@@ -29,6 +29,21 @@
 <p>그러므로, 안정적인 파워와 소비전력대비 적절한 파워가 필요하다.</p>
 <p>팁을 주자면 80+인증 제품들을 사는 것이 좋다.(80+인증제품은 안전성면에서 효율적인 것이지 성능면에서 효율적인 것은 아님!!)</p>
 <p><img src="power.png" width="60%"></p>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<div class="addthis_inline_share_toolbox"></div>
+<ins class="kakao_ad_area" style="display:none;"
+data-ad-unit    = "DAN-PZUOIkAaVM2EsdCR"
+data-ad-width   = "320"
+data-ad-height  = "100"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+<ins class="kakao_ad_area" style="display:none;"
+data-ad-unit    = "DAN-kDybkCZ02fzum4Uk"
+data-ad-width   = "728"
+data-ad-height  = "90"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
 </div>
 </div>
 
