--- a/4.html
+++ b/4.html
@@ -14,6 +14,7 @@
 <div class="grid">
   <div class="col-1 menu">
   <ol>
+    <li><a href="6.html"style="color : white">쉽게보는 컴퓨터 부품</a></li>
     <li><a href="1.html"style="color : white">CPU</a></li>
     <li><a href="2.html"style="color : white">RAM</a></li>
     <li><a href="3.html"style="color : white">그래픽카드(VGA)</a></li>
