--- a/6.html
+++ b/6.html
@@ -3,26 +3,54 @@
 <head>
 <title>메인보드</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
-  <h1><a href="index.html"style="color: black">COMPUTER</a></h1>
-<div id="grid">
+  <div class="header">
+    <h1><a href="index.html" style="color : white">COMPUTER</a></h1>
+  </div>
+<div class="grid">
+  <div class="col-1 menu">
   <ol>
-    <li><a href="index.html">COMPUTER</a></li>
-    <li><a href="1.html">CPU</a></li>
-    <li><a href="2.html">RAM</a></li>
-    <li><a href="3.html">그래픽카드(VGA)</a></li>
-    <li><a href="4.html">메인보드</a></li>
-    <li><a href="5.html">HDD,SSD</a></li>
-    <li><a href="7.html">파워</a></li>
-    <li><a href="8.html">컴퓨터어떻게사니</a></li>
+    <li><a href="6.html"style="color : white">쉽게보는 컴퓨터 부품</a></li>
+    <li><a href="1.html"style="color : white">CPU</a></li>
+    <li><a href="2.html"style="color : white">RAM</a></li>
+    <li><a href="3.html"style="color : white">그래픽카드(VGA)</a></li>
+    <li><a href="4.html"style="color : white">메인보드</a></li>
+    <li><a href="5.html"style="color : white">HDD,SSD</a></li>
+    <li><a href="7.html"style="color : white">파워</a></li>
+
   </ol>
-<div>
-<h2>메인보드</h2>
-<p>메인보드는 컴퓨터의 땅과 같다.</p>
-<p>각종 부품들을 장착할 수 있는 소켓과 슬롯이 존재, 중요 부품들에게 전력을 공급하는 등 크고 작은 역할을 함</p>
+</div>
+<div class="col-2">
+<h2>CPU</h2>
+<h3><인텔></h3>
+<p><img src="CPU1.png" width=70%></p>
+<p>i3보다는 i5보다는 i7보다는 i9의 성능이 좋다.</p>
+<p><img src="CPU2.png" width=60%></p>
+<p>제일 앞에 있는 숫자는 세대수를 의미한다. 클수록 좋다</p>
+<P><img src="CPU5.png" width=60%></p>
+<p>백의자리숫자는 CPU의 성능을 의미하고 클수록 좋다</p>
+<h3>< AMD ></h3>
+<p><img src="Ryzen1.png" width=70%></p>
+<p>i3보다는 i5보다는 i7보다는 i9의 성능이 좋다.</p>
+<p><img src="Ryzen2.png" width=60%></p>
+<p>제일 앞에 있는 숫자는 세대수를 의미한다. 클수록 좋다</p>
+<P><img src="Ryzen3.png" width=60%></p>
+<p>백의자리숫자는 CPU의 성능을 의미하고 클수록 좋다</p>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<div class="addthis_inline_share_toolbox"></div>
+<ins class="kakao_ad_area" style="display:none;"
+data-ad-unit    = "DAN-PZUOIkAaVM2EsdCR"
+data-ad-width   = "320"
+data-ad-height  = "100"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
+
 </div>
 </div>
 
