--- a/3.html
+++ b/3.html
@@ -40,6 +40,10 @@
   <P><img src="VGA1.png" width="60%"></P>
   <P>위의 표를 보면 알 수 있듯이 그래픽카드를 고를 때 가장 중요한 것은 CPU와의 성능을 맞추는 것이다.</P>
   <P><strong>(한쪽만 좋은 것은 좋은 쪽의 성능을 뽑아내지 못 함.)</strong>
+  <P><h2><strong>그래픽카드 읽는법</strong></h2></P>
+  <P><img src="VGA3.png" width="60%"></P>
+  <P><img src="VGA4.png" width="60%"></P>
+
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
