--- a/6.html
+++ b/6.html
@@ -33,6 +33,7 @@
 <p>제일 앞에 있는 숫자는 세대수를 의미한다. 클수록 좋다</p>
 <P><img src="CPU5.png" width=60%></p>
 <p>백의자리숫자는 CPU의 성능을 의미하고 클수록 좋다</p>
+
 <h3>< AMD ></h3>
 <p><img src="Ryzen1.png" width=70%></p>
 <p>i3보다는 i5보다는 i7보다는 i9의 성능이 좋다.</p>
@@ -40,15 +41,26 @@
 <p>제일 앞에 있는 숫자는 세대수를 의미한다. 클수록 좋다</p>
 <P><img src="Ryzen3.png" width=60%></p>
 <p>백의자리숫자는 CPU의 성능을 의미하고 클수록 좋다</p>
+
+<h3>RAM</h3>
+<p><img src="ram1.jpg" width="6%" height="6%" >
+  <img src="ram2.png" width="6%" height="6%" >
+  <img src="ram3.jpg" width="6%" height="6%" ></p>
+
+  <p>작업용&무거운 게임 : 16기가 이상</p>
+  <p><img src="ram4.jpg" width="6%" height="6%" >
+    <img src="ram6.png" width="6%" height="6%" >
+    <img src="ram5.jpg" width="6%" height="6%" ></p>
+    
+    <P><h3><strong>그래픽카드 읽는법</strong></h3></P>
+    <P><img src="VGA3.png" width="60%"></P>
+    <P><img src="VGA4.png" width="60%"></P>
+
+
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <div class="addthis_inline_share_toolbox"></div>
-<ins class="kakao_ad_area" style="display:none;"
-data-ad-unit    = "DAN-PZUOIkAaVM2EsdCR"
-data-ad-width   = "320"
-data-ad-height  = "100"></ins>
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 
 
 </div>
