--- a/2.html
+++ b/2.html
@@ -41,15 +41,7 @@
           <p>RAM은 임시창고라고 보면된다. 이해를 돕기위해 아래 그림을 보아라.</p>
           <p><img src="RAM.png" width="60%"></p>
           <p>이렇듯 RAM은 많으면 많을 수록 좋다. 즉, 다다익선</p>
-          <p>사무용&가벼운 게임 : 4~8기가</p>
-          <p><img src="ram1.jpg" width="6%" height="6%" >
-            <img src="ram2.png" width="6%" height="6%" >
-            <img src="ram3.jpg" width="6%" height="6%" ></p>
-
-            <p>작업용&무거운 게임 : 16기가 이상</p>
-            <p><img src="ram4.jpg" width="6%" height="6%" >
-              <img src="ram6.png" width="6%" height="6%" >
-              <img src="ram5.jpg" width="6%" height="6%" ></p>
+          <p><img src="RAM9.png" width=70%></p>
               <!-- Go to www.addthis.com/dashboard to customize your tools -->
           <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
           <!-- Go to www.addthis.com/dashboard to customize your tools -->
