--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style2.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="naver-site-verification" content="69302a51ba9815045cbf99171838968ee4dc063f" />
 
 <body>
   <div class="header">
