--- a/3.html
+++ b/3.html
@@ -4,6 +4,7 @@
 <title>그래픽카드(VGA)</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="style2.css">
+  <link rel="canonical" href="http://comrmot.ga/index.html">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Global site tag (gtag.js) - Google Analytics -->
