--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>COMRMOT</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style2.css">
+  <link rel="canonical" href="http://comrmot.ga/index.html">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="naver-site-verification" content="69302a51ba9815045cbf99171838968ee4dc063f" />
