--- a/4.html
+++ b/4.html
@@ -4,6 +4,7 @@
 <title>메인보드</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="style2.css">
+  <link rel="canonical" href="http://comrmot.ga/index.html">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
