--- a/4.html
+++ b/4.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style2.css">
   <link rel="canonical" href="http://comrmot.ga/index.html">
+    <meta name="description" content="컴퓨터 부품읽는법과 컴퓨터 견적에 도움을주는 사이트">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
