--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="style2.css">
   <link rel="canonical" href="http://comrmot.ga/index.html">
   <meta name="description" content="컴퓨터 부품읽는법과 컴퓨터 견적에 도움을주는 사이트">
+  <meta property="og:type" content="website">
+<meta property="og:title" content="COMRMOT">
+<meta property="og:description" content="컴퓨터 부품읽는법과 컴퓨터 견적에 도움을 주는 사이트">
+<meta property="og:image" content="">
+<meta property="og:url" content="http://comrmot.ga/index.html">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="naver-site-verification" content="69302a51ba9815045cbf99171838968ee4dc063f" />
@@ -25,6 +30,7 @@
     <li><a href="5.html" style="color : white">HDD,SSD</a></li>
     <li><a href="7.html" style="color : white">파워</a></li>
   </ol>
+  <p><img src="index1.png" width=90%></p>
   <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
