컴알못 추가

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <head>
-  <title>COMRMOT</title>
+  <title>COMRMOT 컴알못</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style2.css">
   <link rel="canonical" href="http://comrmot.ga/index.html">
-  <meta name="description" content="컴퓨터 부품읽는법과 컴퓨터 견적에 도움을주는 사이트">
+  <meta name="description" content="컴퓨터 부품읽는법과 컴퓨터 견적에 도움을주는 컴알못 사이트">
   <meta property="og:type" content="website">
 <meta property="og:title" content="COMRMOT">
-<meta property="og:description" content="컴퓨터 부품읽는법과 컴퓨터 견적에 도움을 주는 사이트">
+<meta property="og:description" content="컴퓨터 부품읽는법과 컴퓨터 견적에 도움을 주는 컴알못 사이트">
 <meta property="og:image" content="">
 <meta property="og:url" content="http://comrmot.ga/index.html">
 </head>
