컴알못 추가 2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="http://comrmot.ga/index.html">
   <meta name="description" content="컴퓨터 부품읽는법과 컴퓨터 견적에 도움을주는 컴알못 사이트">
   <meta property="og:type" content="website">
-<meta property="og:title" content="COMRMOT">
+<meta property="og:title" content="COMRMOT 컴알못">
 <meta property="og:description" content="컴퓨터 부품읽는법과 컴퓨터 견적에 도움을 주는 컴알못 사이트">
 <meta property="og:image" content="">
 <meta property="og:url" content="http://comrmot.ga/index.html">
